# InappropriateVideoHandler

./: Cargo.toml  README.md  blacklist.txt  build.rs  config.yaml  test_blacklist.txt  test_config.yaml  test_whitelist.txt  whitelist.txt
memory/: MEMORY.md  feedback_update_docs.md
src/: background.rs  browser.rs  config.rs  filter.rs  lib.rs  main.rs  state.rs  window_monitor.rs
tests/: integration_test.rs
