[package]
name = "inappropriate-video-handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "inappropriate_video_handler"
path = "src/lib.rs"

[[bin]]
name = "inappropriate-video-handler"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
x11 = "2.21"
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process"] }
anyhow = "1.0"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"